--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,9 @@
 }
 
 body {
+    background-image: url("../images/bg-pattern-top-mobile.svg");
+    background-repeat: no-repeat;
+    background-size: 30rem;
     font-size: 62.5%;
     display: flex;
     flex-direction: row;
@@ -22,7 +25,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: brown;
+    background-color: rgba(165, 42, 42, 0);
     width: 23rem;
 }
 
@@ -31,7 +34,8 @@ h1 {
     font-size: 2rem;
     width: 13rem;
     height: 6.8rem;
-    background-color: aqua;
+    color: #501d50;
+    background-color: rgba(0, 255, 255, 0);
 }
 
 .paragrafo-1 {
@@ -50,7 +54,7 @@ h1 {
     gap: 2rem;
     width: 22.7rem;
     height: 23rem;
-    background-color: chartreuse;
+    background-color: rgba(128, 255, 0, 0);
     font-size: 1rem;
     font-weight: bold;
 
@@ -64,8 +68,12 @@ h1 {
     gap: 0.5rem;
     width: 22.6rem;
     height: 5rem;
-    background-color: rgb(250, 235, 215);
+    background-color: #f7f2f8;
     border-radius: 0.5rem;
+}
+.span-sesao-inicial{
+    color: #501d50;
+    font-size: 1.2rem;
 }
 
 .sesao-artigos {
@@ -88,11 +96,17 @@ article {
 header{
     background-color: rgba(0, 255, 255, 0);
     width: 19rem;
+    height: 4rem;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    gap: 1rem;
+    gap: 1.2rem;
+}
+.sesao-artigos-divisao{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
 .fotos{
     width: 3rem;
@@ -102,7 +116,7 @@ h2{
     font-size: 1.5rem;
     color: white;
 }
-span{
+.span-sesao-artigos{
     font-size: 1.5rem;
     color:#c0679e;
 }
@@ -110,7 +124,7 @@ span{
     color: white;
     width: 19rem;
     height: 7rem;
-    background-color: rgb(19, 124, 216);
+    background-color: rgba(19, 124, 216, 0);
     font-size: 1.2rem;
     line-height: 1.4rem;
     
