--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
     background-image: url("../images/bg-pattern-top-mobile.svg");
     background-repeat: no-repeat;
     background-size: 30rem;
+    background-position: bottom 74rem right -2rem;
     font-size: 62.5%;
     display: flex;
     flex-direction: row;
