--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,16 @@ main {
     width: 23rem;
 }
 
+.divisao-inicial {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    background-color: #62cf1a00;
+    height: 12rem;
+}
+
 h1 {
     text-align: center;
     font-size: 2rem;
@@ -50,17 +60,22 @@ h1 {
 .sesao-inicial {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
-    gap: 2rem;
+    gap: 1.3rem;
     width: 22.7rem;
-    height: 23rem;
-    background-color: rgba(128, 255, 0, 0);
+    height: 32em;
+    background-color: rgba(255, 166, 0, 0);
     font-size: 1rem;
     font-weight: bold;
 
 }
-
+.sesao-estrelas{
+    background-color: #511f5000;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 .bloco-sesao {
     display: flex;
     flex-direction: column;
@@ -72,7 +87,8 @@ h1 {
     background-color: #f7f2f8;
     border-radius: 0.5rem;
 }
-.span-sesao-inicial{
+
+.span-sesao-inicial {
     color: #501d50;
     font-size: 1.2rem;
 }
@@ -80,7 +96,14 @@ h1 {
 .sesao-artigos {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: flex-end;
+    background-color: #62cf1a00;
+    height: 52rem;
+}
+.divisao-artigos{
+display: flex;
+flex-direction: column;
+gap: 1rem;
 }
 
 article {
@@ -94,7 +117,8 @@ article {
     width: 23rem;
     height: 15.5rem;
 }
-header{
+
+header {
     background-color: rgba(0, 255, 255, 0);
     width: 19rem;
     height: 4rem;
@@ -104,29 +128,34 @@ header{
     align-items: center;
     gap: 1.2rem;
 }
-.sesao-artigos-divisao{
+
+.sesao-artigos-divisao {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
-.fotos{
+
+.fotos {
     width: 3rem;
     border-radius: 4rem;
 }
-h2{
+
+h2 {
     font-size: 1.5rem;
     color: white;
 }
-.span-sesao-artigos{
+
+.span-sesao-artigos {
     font-size: 1.5rem;
-    color:#c0679e;
+    color: #c0679e;
 }
-.pararafo-artigo{
+
+.pararafo-artigo {
     color: white;
     width: 19rem;
     height: 7rem;
     background-color: rgba(19, 124, 216, 0);
     font-size: 1.2rem;
     line-height: 1.4rem;
-    
+
 }
