--- a/styles/media-querys.css
+++ b/styles/media-querys.css
@@ -18,37 +18,74 @@
 
    main{
     flex-direction: column;
-    background-color: aquamarine;
+    background-color: rgba(127, 255, 212, 0);
     width: 85rem;
    }
+   h1{
+    font-size: 3rem;
+    width: 20rem;
+    height: 9rem;
+    color: #501d50;
+    text-align: left;
+    background-color: rgba(0, 255, 255, 0);
+   }
+   .paragrafo-1 {
+    background-color: rgba(156, 226, 43, 0);
+    font-size: 1.2rem;
+    width: 30rem;
+    height: 7.3rem;
+    text-align: left;
+    color: #3d3d3d9d;
+}
+.divisao-inicial{
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: rgba(0, 0, 255, 0);
+    width: 45rem;
+    height: 15rem;
+   }
    .sesao-inicial{
-    background-color: blueviolet;
+    background-color: rgba(137, 43, 226, 0);
     width: 80rem;
     height: 20rem;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: flex-start;
     gap: 0.5rem;
    }
-   .divisao-inicial{
-    background-color: blue;
-   }
    .sesao-estrelas{
-    background-color: brown;
+    background-color: rgba(165, 42, 42, 0);
     width: 36rem;
+    height:15rem;
    }
    .bloco-sesao{
     flex-direction: row;
-    width: 27rem;
-    height: 4rem;
+    justify-content: flex-start;
+    width: 23rem;
+    height: 0rem;
+    padding: 1.5rem;
    }
-   .bloco-sesao-01{
-    
+   .bloco-sesao-01{ }
+
+   .bloco-sesao-02{ margin-left: 3rem; }
+   .bloco-sesao-03{margin-left: 6rem; }
+   .sesao-artigos{
+    background-color: rgba(0, 255, 255, 0);
+    width: 80rem;
+    height: 30rem;
+    flex-direction: row;
+    justify-content: flex-start;
    }
-   .bloco-sesao-02{
-    margin-left: 5rem;
-   }
-   .bloco-sesao-03{
-    margin-left: 9rem;
-   }
+   .divisao-artigos{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 80rem;
+    gap: 4rem;
+    background-color: rgba(0, 0, 0, 0);
+    }
+    .artigo-01{ }
+    .artigo-02{ margin-top: 2rem; }
+    .artigo-03{ margin-top: 4rem; }
 }
